virsh/network/iptables/nuc/rules.v4
# Generated by iptables-save v1.8.11 (nf_tables) on Sat Oct  3 13:10:31 2026
*mangle
:PREROUTING ACCEPT [663838:15035361605]
:INPUT ACCEPT [562765:14741410291]
:FORWARD ACCEPT [100956:293940798]
:OUTPUT ACCEPT [417282:165335930]
:POSTROUTING ACCEPT [518322:459292155]
:LIBVIRT_PRT - [0:0]
-A POSTROUTING -j LIBVIRT_PRT
-A LIBVIRT_PRT -o vm-nat -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
-A LIBVIRT_PRT -o vm-local -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
-A LIBVIRT_PRT -o vm-local -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
-A LIBVIRT_PRT -o vm-nat -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Sat Oct  3 13:10:31 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Sat Oct  3 13:10:31 2026
*filter
:INPUT ACCEPT [562515:14741373227]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [417223:165316510]
:LIBVIRT_FWI - [0:0]
:LIBVIRT_FWO - [0:0]
:LIBVIRT_FWX - [0:0]
:LIBVIRT_INP - [0:0]
:LIBVIRT_OUT - [0:0]
-A INPUT -j LIBVIRT_INP
-A FORWARD -s 192.168.1.0/24 -d 192.168.100.0/24 -i wlo1 -o vm-local -m comment --comment "WiFi to VM network" -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -d 192.168.1.0/24 -i vm-local -o wlo1 -m comment --comment "VM network to WiFi" -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -d 192.168.100.0/24 -i thunderbolt0 -o vm-local -m comment --comment "Thunderbolt to VM network" -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -d 192.168.10.0/24 -i vm-local -o thunderbolt0 -m comment --comment "VM network to Thunderbolt" -j ACCEPT
-A FORWARD -i tun0 -o vm-local -m comment --comment "OpenVPN to VM network" -j ACCEPT
-A FORWARD -i vm-local -o tun0 -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "VM network to OpenVPN" -j ACCEPT
-A FORWARD -j LIBVIRT_FWX
-A FORWARD -j LIBVIRT_FWI
-A FORWARD -j LIBVIRT_FWO
-A OUTPUT -j LIBVIRT_OUT
-A LIBVIRT_FWI -d 192.168.50.0/24 -o vm-nat -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A LIBVIRT_FWI -o vm-nat -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWI -o vm-local -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWI -o vm-local -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWI -d 192.168.50.0/24 -o vm-nat -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A LIBVIRT_FWI -o vm-nat -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWO -s 192.168.50.0/24 -i vm-nat -j ACCEPT
-A LIBVIRT_FWO -i vm-nat -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWO -i vm-local -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWO -i vm-local -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWO -s 192.168.50.0/24 -i vm-nat -j ACCEPT
-A LIBVIRT_FWO -i vm-nat -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWX -i vm-nat -o vm-nat -j ACCEPT
-A LIBVIRT_FWX -i vm-local -o vm-local -j ACCEPT
-A LIBVIRT_FWX -i vm-local -o vm-local -j ACCEPT
-A LIBVIRT_FWX -i vm-nat -o vm-nat -j ACCEPT
-A LIBVIRT_INP -i vm-nat -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i vm-nat -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i vm-nat -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i vm-nat -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i vm-local -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i vm-local -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i vm-local -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i vm-local -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i vm-local -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i vm-local -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i vm-local -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i vm-local -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i vm-nat -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i vm-nat -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i vm-nat -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i vm-nat -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_OUT -o vm-nat -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o vm-nat -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o vm-nat -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o vm-nat -p tcp -m tcp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o vm-local -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o vm-local -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o vm-local -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o vm-local -p tcp -m tcp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o vm-local -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o vm-local -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o vm-local -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o vm-local -p tcp -m tcp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o vm-nat -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o vm-nat -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o vm-nat -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o vm-nat -p tcp -m tcp --dport 68 -j ACCEPT
COMMIT
# Completed on Sat Oct  3 13:10:31 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Sat Oct  3 13:10:31 2026
*nat
:PREROUTING ACCEPT [3265:367765]
:INPUT ACCEPT [929:176161]
:OUTPUT ACCEPT [5355:500033]
:POSTROUTING ACCEPT [5371:491237]
:LIBVIRT_PRT - [0:0]
-A PREROUTING -i tun0 -p tcp -m tcp --dport 32687 -j DNAT --to-destination 192.168.100.10:32687
-A POSTROUTING -j LIBVIRT_PRT
-A POSTROUTING -d 192.168.100.10/32 -o vm-local -p tcp -m tcp --dport 32687 -j SNAT --to-source 192.168.100.1
-A LIBVIRT_PRT -s 192.168.50.0/24 -d 224.0.0.0/24 -j RETURN
-A LIBVIRT_PRT -s 192.168.50.0/24 -d 255.255.255.255/32 -j RETURN
-A LIBVIRT_PRT -s 192.168.50.0/24 ! -d 192.168.50.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.50.0/24 ! -d 192.168.50.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.50.0/24 ! -d 192.168.50.0/24 -j MASQUERADE
-A LIBVIRT_PRT -s 192.168.50.0/24 -d 224.0.0.0/24 -j RETURN
-A LIBVIRT_PRT -s 192.168.50.0/24 -d 255.255.255.255/32 -j RETURN
-A LIBVIRT_PRT -s 192.168.50.0/24 ! -d 192.168.50.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.50.0/24 ! -d 192.168.50.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.50.0/24 ! -d 192.168.50.0/24 -j MASQUERADE
COMMIT
# Completed on Sat Oct  3 13:10:31 2026
